# Q-GAIN

./: .buildinfo  .gitignore  AUTHORS.md  CITATION.cff  README.md  further.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: build_docs.yml
Setup/: index.html
Use/: index.html  load.html  replace.html  start.html  using.html
_modules/: index.html
_modules/qgain/: control.html  detector.html  io.html  models.html  run_ml.html  run_plot.html  run_stat.html  utilities.html
_modules/qgain/soldet/: classifier_nn.html  mhat_metric.html  object_nn.html  pi_models.html  soliton_datasets.html  soliton_detector.html
_modules/qgain/vdet/: vortex_detector.html
_sources/Use/: start.md
_sources/source/: modules.rst  qgain.rst
_static/: QGAINB.ai
docs/: conf.py  further.md  index.rst
docs/Setup/: index.md
docs/Use/: index.md  load.md  replace.md  using.md
docs/source/: qgain.soldet.rst  qgain.vdet.rst
qgain/: __init__.py  control.py  detector.py  io.py  models.py  run_classifier.py  run_metric.py  run_ml.py  run_od.py  run_plot.py  run_stat.py  utilities.py
qgain/soldet/: __init__.py  classifier_nn.py  mhat_metric.py  object_nn.py  pi_models.py  soliton_datasets.py  soliton_detector.py
qgain/vdet/: __init__.py  vortex_detector.py
source/: modules.html  qgain.html  qgain.soldet.html  qgain.vdet.html
tests/: __init__.py  test_base.py
