[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qgain"
description = "Q-GAIN is an evolution of the SolDet package, serving as the foundation of a growing modular architecture to support a wider range of machine learning and physically informed analysis applications. "
version = "1.0.0"
readme = "README.md"
license = "LGPL-3.0-or-later"
license-files = [
    "license",
]
authors = [
  {name = "Michael Doris"},
  {name = "Shangjie Guo"},
  {name = "Sophia M. Koh"},
  {name = "Lisa Ritter"},
  {name = "Amilson R. Fritsch"},
  {name = "Ian B. Spielman"},
  {name = "Justyna P. Zwolak"},
]
maintainers = [
  {name = "Michael Doris", email = "mjdoris@terpmail.umd.edu"},
  {name = "Justyna P. Zwolak", email = "justyna.zwolak@nist.gov"},
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
requires-python = ">=3.10"
dependencies = [
        "torch >= 2.2, <2.3; platform_system == 'Darwin'",
        "torch >= 2.3.1; platform_system != 'Darwin'",
        'torchvision >= 0.16.1',
        'numpy < 2 ; platform_system == "Darwin"',
        'numpy > 2 ; platform_system != "Darwin"',
        'scikit-learn >= 1.3.2',
        'scikit-image',
        'scipy >= 1.11.4',
        'tqdm >= 4.66.0',
        'matplotlib >= 3.8.3',
        'lmfit >= 1.2.2',
        'h5py >= 3.10.0',
        'requests >= 2.31.0',
        'pandas',
]
[project.optional-dependencies]
testing = [
        'pytest',
        'lxml'
]

[project.urls]
Homepage = "https://github.com/Q-GAIN/Q-GAIN/"
